@@ -1,3 +1,8 @@
+2010-10-21  Martin Jambor  <mjambor@suse.cz>
+
+	PR tree-optimization/45875
+	* g++.dg/ipa/pr45875.C: New test.
+
 2010-10-21  Ira Rosen  <irar@il.ibm.com>
 
 	PR tree-optimization/46049
